--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,16 @@
 name: Test-Base
-version: 0.44
+version: 0.45
 abstract: A Data Driven Testing Framework
-author: Brian Ingerson <ingy@cpan.org>
+author: Ingy döt Net <ingy@cpan.org>
 license: perl
 distribution_type: module
 requires:
   perl: 5.6.1
   Spiffy: 0.24
-  Test::More: 0.54
+  Test::More: 0.62
+  Text::Diff: 0.35
+  Algorithm::Diff: 1.15
 no_index:
   directory:
     - inc
-generated_by: Module::Install version 0.36
+generated_by: Module::Install version 0.47
