--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,18 @@
-name: Test-Base
-version: 0.45
-abstract: A Data Driven Testing Framework
-author: Ingy döt Net <ingy@cpan.org>
-license: perl
+
+no_index: 
+  directory: 
+    - inc
+    - t
+generated_by: Module::Install version 0.54
 distribution_type: module
-requires:
+version: 0.45
+name: Test-Base
+author: "Ingy d\xC3\xB6t Net <ingy@cpan.org>"
+license: perl
+requires: 
+  Text::Diff: 0.35
+  Test::More: 0.62
   perl: 5.6.1
   Spiffy: 0.24
-  Test::More: 0.62
-  Text::Diff: 0.35
   Algorithm::Diff: 1.15
-no_index:
-  directory:
-    - inc
-generated_by: Module::Install version 0.47
+abstract: A Data Driven Testing Framework
