--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,12 @@
-
 no_index: 
   directory: 
     - inc
     - t
 generated_by: Module::Install version 0.54
 distribution_type: module
-version: 0.52
+version: 0.53
 name: Test-Base
-author: "Ingy d\xC3\xB6t Net <ingy@cpan.org>"
+author: "Ingy döt Net <ingy@cpan.org>"
 license: perl
 requires: 
   Test::More: 0.62
