--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,16 @@
+abstract: A Data Driven Testing Framework
+author: "Ingy d\xC3\xB6t Net <ingy@cpan.org>"
+distribution_type: module
+generated_by: Module::Install version 0.64
+license: perl
+name: Test-Base
 no_index: 
   directory: 
     - inc
     - t
-generated_by: Module::Install version 0.54
-distribution_type: module
-version: 0.53
-name: Test-Base
-author: "Ingy döt Net <ingy@cpan.org>"
-license: perl
 requires: 
+  Filter::Util::Call: 0
+  Spiffy: 0.30
   Test::More: 0.62
   perl: 5.6.1
-  Spiffy: 0.30
-abstract: A Data Driven Testing Framework
+version: 0.54
