--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,21 @@
-abstract: A Data Driven Testing Framework
-author: "Ingy d\xC3\xB6t Net <ingy@cpan.org>"
+---
+abstract: 'A Data Driven Testing Framework'
+author:
+  - 'Ingy döt Net <ingy@cpan.org>'
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: 'Module::Install version 0.75'
 license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Test-Base
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   Filter::Util::Call: 0
   Spiffy: 0.30
   Test::More: 0.62
   perl: 5.6.1
-version: 0.54
+version: 0.55
