--- a/META.yml
+++ b/META.yml
@@ -3,19 +3,23 @@ abstract: 'A Data Driven Testing Framework'
 author:
   - 'Ingy döt Net <ingy@cpan.org>'
 distribution_type: module
-generated_by: 'Module::Install version 0.75'
+generated_by: 'Module::Install version 0.79'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Test-Base
 no_index:
   directory:
     - inc
     - t
+recommends:
+  Test::Deep: 0
 requires:
   Filter::Util::Call: 0
   Spiffy: 0.30
   Test::More: 0.62
   perl: 5.6.1
-version: 0.55
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.56
