--- a/META.yml
+++ b/META.yml
@@ -2,7 +2,9 @@
 abstract: 'A Data Driven Testing Framework'
 author:
   - 'Ingy döt Net <ingy@cpan.org>'
-build_requires: {}
+build_requires:
+  Algorithm::Diff: '0'
+  Text::Diff: '0'
 configure_requires:
   ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
@@ -27,4 +29,4 @@ resources:
   bugtracker: https://github.com/ingydotnet/test-base-pm/issues
   homepage: https://github.com/ingydotnet/test-base-pm
   repository: https://github.com/ingydotnet/test-base-pm.git
-version: '0.63'
+version: '0.64'
