Import of INGY/Test-Base-0.74 from CPAN.
gitpan-cpan-distribution: Test-Base
gitpan-cpan-version:      0.74
gitpan-cpan-path:         INGY/Test-Base-0.74.tar.gz
gitpan-cpan-author:       INGY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,10 +23,11 @@ no_index:
 recommends:
   Test::Deep: '0'
 requires:
+  Filter::Util::Call: '0'
   Spiffy: '0.40'
   perl: v5.8.1
 resources:
   bugtracker: https://github.com/ingydotnet/test-base-pm/issues
   homepage: https://github.com/ingydotnet/test-base-pm
   repository: https://github.com/ingydotnet/test-base-pm.git
-version: '0.73'
+version: '0.74'
